syntax = "proto3";

package users;

option java_package = "com.example.users";

message UserRequest {
  string username = 1;
  string email = 2;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
}

message UserIdRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message DeleteUserResponse {
  bool success = 1;
}

service Users {
  rpc Create(UserRequest) returns (UserResponse);
  rpc Read(UserIdRequest) returns (UserResponse);
  rpc Update(UpdateUserRequest) returns (UserResponse);
  rpc Delete(UserIdRequest) returns (DeleteUserResponse);
}